--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
   font-size: 5vh;
 }
 img {
-  width: 30vh;
+  width: 30%;
   height: auto;
   margin: auto;
   flex-basis: auto;
@@ -26,7 +26,7 @@ button {
   font-size: 16px;
 }
 .gif {
-  width: 50vh;
+  width: 60%;
   height: auto;
 }
 
