--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
   align-items: center;
   width: 80%;
   padding: 10%;
-  padding-top: 5%;
+  padding-top: 0;
   padding-bottom: 0;
   font-family: "Roboto", sans-serif;
   height: 100vh;
